--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,1 +1,1 @@
-sonar.exclusions=**/_test.go,**/*_generated*.go,**/*_generated/**/*.go
+sonar.exclusions=**/*_test.go,**/*_generated*.go,**/*_generated/**/*.go
