--- a/deploy/hub/300-apiserver.yaml
+++ b/deploy/hub/300-apiserver.yaml
@@ -38,6 +38,22 @@ spec:
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
+  name: v1beta1.mcm.ibm.com
+spec:
+  group: mcm.ibm.com
+  version: v1beta1
+  service:
+    namespace: multicloud-system
+    name: mcm-apiserver
+  insecureSkipTLSVerify: true
+  groupPriorityMinimum: 10000
+  versionPriority: 20
+
+---
+
+apiVersion: apiregistration.k8s.io/v1
+kind: APIService
+metadata:
   name: v1alpha1.clusterregistry.k8s.io
 spec:
   group: clusterregistry.k8s.io
