--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ stages:
 jobs:
   include:
     - stage: build
-      name: "Build the image and run unit tests"
+      name: "Build the image and push it"
       script:
         - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
         - |
@@ -64,6 +64,7 @@ jobs:
         - |
           make
           make component/test/unit
+          make sonar/go
     - stage: test-e2e
       name: "Deploy the image to a cluster and run e2e tests"
       if: type = pull_request
