--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,12 @@ env:
     - COMPONENT_INIT_COMMAND=${TRAVIS_BUILD_DIR}/build/install-dependencies.sh
     - COMPONENT_DEPLOY_COMMAND=${TRAVIS_BUILD_DIR}/build/deploy-to-cluster.sh
     - COMPONENT_BUILD_COMMAND=${TRAVIS_BUILD_DIR}/build/build.sh
+    - COMPONENT_UNIT_TEST_COMMAND=${TRAVIS_BUILD_DIR}/build/run-lint.sh
     - COMPONENT_UNIT_TEST_COMMAND=${TRAVIS_BUILD_DIR}/build/run-unit-tests.sh
     - COMPONENT_E2E_TEST_COMMAND=${TRAVIS_BUILD_DIR}/build/run-e2e-tests.sh
 
 stages:
+  - lint
   - build
   - unit-test
   - test-e2e
@@ -46,6 +48,12 @@ stages:
 
 jobs:
   include:
+    - stage: lint
+      name: "Lint code"
+      script:
+        - |
+          make
+          make component/lint
     - stage: build
       name: "Build the image and run unit tests"
       script:
