--- a/common/config/.golangci.yml
+++ b/common/config/.golangci.yml
@@ -1,6 +1,5 @@
 service:
-  # When updating this, also update the version stored in docker/build-tools/Dockerfile in the multicloudlab/tools repo.
-  golangci-lint-version: 1.18.x # use the fixed version to not introduce new linters unexpectedly
+  golangci-lint-version: 1.23.x # use the fixed version to not introduce new linters unexpectedly
 run:
   # timeout for analysis, e.g. 30s, 5m, default is 1m
   deadline: 20m
@@ -37,6 +36,9 @@ linters:
     - scopelint
     - funlen
     - bodyclose
+    - godox
+    - gomnd
+    - wsl
   fast: false
 
 linters-settings:
@@ -60,7 +62,7 @@ linters-settings:
   goimports:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
-    local-prefixes: github.com/IBM/
+    local-prefixes: github.com/open-cluster-management/
   maligned:
     # print struct with more effective memory layout or not, false by default
     suggest-new: true
