--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ jobs:
           make
           make component/build
           make component/push
+          make imagescan/status
     - stage: unit-test
       name: "Run unit test"
       if: type = pull_request
