--- a/common/config/.golangci.yml
+++ b/common/config/.golangci.yml
@@ -50,6 +50,8 @@ linters-settings:
     # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`;
     # default is false: such cases aren't reported by default.
     check-blank: false
+  gocognit:
+    min-complexity: 40
   govet:
     # report about shadowed variables
     check-shadowing: false
