--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
   include:
     - stage: lint
       name: "Run code lint"
-      script: bash ${TRAVIS_BUILD_DIR}/build/run-code-lint.sh
+      script: if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ${TRAVIS_BUILD_DIR}/build/run-code-lint.sh; fi;
     - stage: build
       name: "Build the image and run unit tests"
       script:
