--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,8 @@ jobs:
   include:
     - stage: lint
       name: "Run code lint"
-      script: if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ${TRAVIS_BUILD_DIR}/build/run-code-lint.sh; fi;
+      if: type = pull_request
+      script: bash ${TRAVIS_BUILD_DIR}/build/run-code-lint.sh
     - stage: build
       name: "Build the image and run unit tests"
       script:
