--- a/common/config/.golangci.yml
+++ b/common/config/.golangci.yml
@@ -1,6 +1,5 @@
 service:
-  # When updating this, also update the version stored in docker/build-tools/Dockerfile in the multicloudlab/tools repo.
-  golangci-lint-version: 1.18.x # use the fixed version to not introduce new linters unexpectedly
+  golangci-lint-version: 1.23.x # use the fixed version to not introduce new linters unexpectedly
 run:
   # timeout for analysis, e.g. 30s, 5m, default is 1m
   deadline: 20m
@@ -37,6 +36,9 @@ linters:
     - scopelint
     - funlen
     - bodyclose
+    - godox
+    - gomnd
+    - wsl
   fast: false
 
 linters-settings:
@@ -48,6 +50,8 @@ linters-settings:
     # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`;
     # default is false: such cases aren't reported by default.
     check-blank: false
+  gocognit:
+    min-complexity: 40
   govet:
     # report about shadowed variables
     check-shadowing: false
@@ -57,10 +61,6 @@ linters-settings:
   gofmt:
     # simplify code: gofmt with `-s` option, true by default
     simplify: true
-  goimports:
-    # put imports beginning with prefix after 3rd-party packages;
-    # it's a comma-separated list of prefixes
-    local-prefixes: github.com/IBM/
   maligned:
     # print struct with more effective memory layout or not, false by default
     suggest-new: true
