--- a/deploy/prod/hub/kustomization.yaml
+++ b/deploy/prod/hub/kustomization.yaml
@@ -2,11 +2,11 @@ resources:
 - ../../dev/hub/
 
 images:
-- name: github.ibm.com/IBMPrivateCloud/multicloud-operators-foundation/cmd/mcm-apiserver
-  newName: quay.io/rhibmcollab/multicloud-manager
+- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/mcm-apiserver
+  newName: quay.io/open-cluster-management/multicloud-manager
   newTag: latest
-- name: github.ibm.com/IBMPrivateCloud/multicloud-operators-foundation/cmd/mcm-controller
-  newName: quay.io/rhibmcollab/multicloud-manager
+- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/mcm-controller
+  newName: quay.io/open-cluster-management/multicloud-manager
   newTag: latest
 
 secretGenerator:
