--- a/deploy/prod/serviceregistry/kustomization.yaml
+++ b/deploy/prod/serviceregistry/kustomization.yaml
@@ -2,6 +2,6 @@ resources:
 - ../../dev/serviceregistry/
 
 images:
-- name: github.ibm.com/IBMPrivateCloud/multicloud-operators-foundation/cmd/serviceregistry
-  newName: quay.io/rhibmcollab/multicloud-manager
+- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/serviceregistry
+  newName: quay.io/open-cluster-management/multicloud-manager
   newTag: latest
