using quay.io/open-cluster-management repo

--- a/deploy/prod/hub/kustomization.yaml
+++ b/deploy/prod/hub/kustomization.yaml
@@ -4,10 +4,10 @@ resources:
 images:
 - name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/mcm-apiserver
   newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: latest
+  newTag: 0.0.1
 - name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/mcm-controller
   newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: latest
+  newTag: 0.0.1
 
 secretGenerator:
 - name: mcm-image-pull-secret
