--- a/deploy/prod/klusterlet/kustomization.yaml
+++ b/deploy/prod/klusterlet/kustomization.yaml
@@ -4,10 +4,10 @@ resources:
 images:
 - name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/klusterlet-connectionmanager
   newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: latest
+  newTag: 0.0.1
 - name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/klusterlet
   newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: latest
+  newTag: 0.0.1
 
 secretGenerator:
 - name: mcm-image-pull-secret
