--- a/deploy/prod/serviceregistry/kustomization.yaml
+++ b/deploy/prod/serviceregistry/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
 images:
 - name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/serviceregistry
   newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: latest
+  newTag: 0.0.1
