--- a/deploy/prod/klusterlet/kustomization.yaml
+++ b/deploy/prod/klusterlet/kustomization.yaml
@@ -2,12 +2,12 @@ resources:
 - ../../dev/klusterlet/
 
 images:
-- name: github.ibm.com/IBMPrivateCloud/multicloud-operators-foundation/cmd/klusterlet-connectionmanager
-  newName: quay.io/rhibmcollab/multicloud-manager
-  newTag: latest
-- name: github.ibm.com/IBMPrivateCloud/multicloud-operators-foundation/cmd/klusterlet
-  newName: quay.io/rhibmcollab/multicloud-manager
-  newTag: latest
+- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/klusterlet-connectionmanager
+  newName: quay.io/open-cluster-management/multicloud-manager
+  newTag: 0.0.1
+- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/klusterlet
+  newName: quay.io/open-cluster-management/multicloud-manager
+  newTag: 0.0.1
 
 secretGenerator:
 - name: mcm-image-pull-secret
