--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ jobs:
         - |
           make
           make component/test/unit
+          make sonar/go
     - stage: test-e2e
       name: "Deploy the image to a cluster and run e2e tests"
       if: type = pull_request
