Enable inventory controller on mcm-controller

--- a/deploy/dev/hub/resources/300-controller.yaml
+++ b/deploy/dev/hub/resources/300-controller.yaml
@@ -29,4 +29,5 @@ spec:
           - "/mcm-controller"
           - "--enable-rbac"
           - "--enable-service-registry"
+          - "--enable-inventory"
           - "--leader-elect=true"
