--- a/deploy/dev/hub/kustomization.yaml
+++ b/deploy/dev/hub/kustomization.yaml
@@ -1,6 +1,7 @@
 resources:
 - resources/300-apiserver.yaml
 - resources/300-controller.yaml
+- resources/200-baremetalassets-crd.yaml
 - resources/200-mongo.yaml
 - resources/200-etcd.yaml
 - resources/200-clusterrole.yaml
