add unit test for aggregator

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.sources=.
 sonar.exclusions=**/*_test.go,**/*_generated*.go,**/*_generated/**,**/vendor/**
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**
+sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**,**/test/**,**/cmd/**,**/common/**,**/pkg/apis/**
 sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
 sonar.externalIssuesReportPaths=gosec.json
