--- a/deploy/dev/hub/resources/300-proxyserver.yaml
+++ b/deploy/dev/hub/resources/300-proxyserver.yaml
@@ -18,10 +18,10 @@ spec:
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
-  name: v1.proxy.open-cluster-management.io
+  name: v1beta1.proxy.open-cluster-management.io
 spec:
   group: proxy.open-cluster-management.io
-  version: v1
+  version: v1beta1
   service:
     namespace: multicloud-system
     name: acm-proxyserver
@@ -53,7 +53,7 @@ spec:
         image: github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-proxyserver
         imagePullPolicy: IfNotPresent
         args:
-          - "/proxyserver"
+          - "/acm-proxyserver"
           - "--cert-dir=/tmp"
           - "--secure-port=6443"
         livenessProbe:
