--- a/deploy/dev/hub/resources/crds/view.open-multicluster-management.io_spokeviews.yaml
+++ b/deploy/dev/hub/resources/crds/view.open-multicluster-management.io_spokeviews.yaml
@@ -105,9 +105,9 @@ spec:
           - conditions
           type: object
       type: object
-  version: v1
+  version: v1beta1
   versions:
-  - name: v1
+  - name: v1beta1
     served: true
     storage: true
 status:
