--- a/deploy/dev/klusterlet/resources/300-agent.yaml
+++ b/deploy/dev/klusterlet/resources/300-agent.yaml
@@ -1,3 +1,21 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: acm-agent
+  namespace: multicloud-endpoint
+  labels:
+    app: acm-agent
+spec:
+  type: ClusterIP
+  ports:
+    - name: app
+      port: 443
+      protocol: TCP
+      targetPort: 4443
+  selector:
+    app: acm-agent
+
+---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -23,10 +41,13 @@ spec:
             - "/acm-agent"
             - "--hub-kubeconfig=/var/run/hub/kubeconfig"
             - "--cluster-name=cluster0"
+            - "--port=4443"
+            - "--klusterlet-address=acm-agent.multicloud-endpoint.svc"
+            - "--klusterlet-port=443"
           volumeMounts:
             - name: hub-config
               mountPath: /var/run/hub
       volumes:
         - name: hub-config
           secret:
-            secretName: hubconfig
+            secretName: mcm-connmgr-hub-kubeconfig
