DO NOT MERGE test add managed cluster

--- a/deploy/dev/hub/resources/300-proxyserver.yaml
+++ b/deploy/dev/hub/resources/300-proxyserver.yaml
@@ -48,6 +48,7 @@ spec:
       labels:
         app: acm-proxyserver
     spec:
+      serviceAccountName: hub-sa
       containers:
       - name: acm-proxyserver
         image: github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-proxyserver
