--- a/deploy/dev/hub/kustomization.yaml
+++ b/deploy/dev/hub/kustomization.yaml
@@ -1,5 +1,9 @@
 resources:
-- resources/crds
+- resources/crds/action.open-cluster-management.io_clusteractions.yaml
+- resources/crds/clusters.open-cluster-management.io_spokeclusters.crd.yaml
+- resources/crds/internal.open-cluster-management.io_clusterinfos.yaml
+- resources/crds/inventory.open-cluster-management.io_baremetalassets.yaml
+- resources/crds/view.open-cluster-management.io_spokeviews.yaml
 - resources/300-apiserver.yaml
 - resources/300-controller.yaml
 - resources/200-mongo.yaml
