--- a/deploy/dev/hub/resources/300-proxyserver.yaml
+++ b/deploy/dev/hub/resources/300-proxyserver.yaml
@@ -56,9 +56,9 @@ spec:
           - "/acm-proxyserver"
           - "--cert-dir=/tmp"
           - "--secure-port=6443"
-          - "--klusterlet-cafile=/var/run/klusterlet/ca.crt"
-          - "--klusterlet-certfile=/var/run/klusterlet/tls.crt"
-          - "--klusterlet-keyfile=/var/run/klusterlet/tls.key"
+          - "--agent-cafile=/var/run/agent/ca.crt"
+          - "--agent-certfile=/var/run/agent/tls.crt"
+          - "--agent-keyfile=/var/run/agent/tls.key"
         livenessProbe:
           httpGet:
             path: /healthz
@@ -73,10 +73,10 @@ spec:
             port: 6443
           initialDelaySeconds: 2
         volumeMounts:
-        - mountPath: /var/run/klusterlet
-          name: klusterlet-certs
+        - mountPath: /var/run/agent
+          name: agent-certs
       volumes:
-      - name: klusterlet-certs
+      - name: agent-certs
         secret:
           defaultMode: 420
-          secretName: acm-klusterlet-self-signed-secrets
+          secretName: acm-agent-self-signed-secrets
