--- a/examples/action/action_create.yaml
+++ b/examples/action/action_create.yaml
@@ -1,6 +1,6 @@
 # This work is used to create nginx deployment to clusters cluster0
 apiVersion: action.open-cluster-management.io/v1beta1
-kind: ClusterAction
+kind: ManagedClusterAction
 metadata:
   name: nginx-action-create
   namespace: cluster0
