--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=open-cluster-management_multicloud-operators-foundation
 sonar.projectName=multicloud-operators-foundation
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/*_generated*.go,**/*_generated/**,**/vendor/**,**/test/**,**/cmd/**,**/common/**,**/pkg/apis/**,**/pkg/api/**
+sonar.exclusions=**/*_test.go,**/*_generated*.go,**/*_generated/**,**/vendor/**,**/test/**,**/cmd/**,**/common/**,**/pkg/apis/**,**/pkg/api/**,**/pkg/proxyserver/apis/**
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**
