--- a/deploy/prod/hub/serviceaccount-patch.yaml
+++ b/deploy/prod/hub/serviceaccount-patch.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: hub-sa
-  namespace: multicloud-system
+  name: acm-foundation-sa
+  namespace: open-cluster-management
 imagePullSecrets:
-- name: mcm-image-pull-secret
+- name: acm-image-pull-secret
