--- a/deploy/prod/klusterlet/kustomization.yaml
+++ b/deploy/prod/klusterlet/kustomization.yaml
@@ -2,19 +2,13 @@ resources:
 - ../../dev/klusterlet/
 
 images:
-- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/klusterlet-connectionmanager
-  newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: 0.0.1
-- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/klusterlet
-  newName: quay.io/open-cluster-management/multicloud-manager
-  newTag: 0.0.1
-- name: github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-agent
+- name: ko://github.com/open-cluster-management/multicloud-operators-foundation/cmd/acm-agent
   newName: quay.io/open-cluster-management/multicloud-manager
   newTag: 0.0.1
 
 secretGenerator:
-- name: mcm-image-pull-secret
-  namespace: multicloud-endpoint
+- name: acm-image-pull-secret
+  namespace: open-cluster-management-agent
   literals:
   - .dockerconfigjson=<AUTH INFO>
   type: "kubernetes.io/dockerconfigjson"
