--- a/deploy/prod/klusterlet/serviceaccount-patch.yaml
+++ b/deploy/prod/klusterlet/serviceaccount-patch.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: klusterlet-sa
-  namespace: multicloud-endpoint
+  namespace: open-cluster-management-agent
 imagePullSecrets:
-- name: mcm-image-pull-secret
+- name: acm-image-pull-secret
