--- a/deploy/dev/hub/resources/crds/internal.open-cluster-management.io_managedclusterinfos.yaml
+++ b/deploy/dev/hub/resources/crds/internal.open-cluster-management.io_managedclusterinfos.yaml
@@ -91,16 +91,18 @@ spec:
                     cluster, is matched when the Type is OCP.
                   properties:
                     availableUpdates:
-                      description: Available update versions
+                      description: availableUpdates contains the list of update versions
+                        that are appropriate for the manage cluster.
                       items:
                         type: string
                       type: array
                     desiredVersion:
-                      description: Desiredversion is the version that the cluster
-                        desired.
+                      description: Desiredversion represents the desired version of
+                        the ocp cluster
                       type: string
                     upgradeFailed:
-                      description: Cluster upgrade failed
+                      description: UpgradeFailed indicate whether upgrade of the manage
+                        cluster is failed
                       type: boolean
                     version:
                       description: Version is the distribution version of OCP
