--- a/deploy/dev/klusterlet/manifestwork/agent.yaml
+++ b/deploy/dev/klusterlet/manifestwork/agent.yaml
@@ -16,24 +16,16 @@ spec:
       metadata:
         name: acm-agent
       rules:
-      - apiGroups: [""]
-        resources: ["configmaps", "events", "endpoints","services"]
-        verbs: ["get", "list", "watch", "create", "update", "delete", "deletecollection", "patch"]
-      - apiGroups: [""]
-        resources: ["nodes"]
-        verbs: ["get", "list", "watch"]
-      - apiGroups: ["extensions"]
-        resources: ["ingresses"]
-        verbs: ["get"]
-      - apiGroups: ["route.openshift.io"]
-        resources: ["routes"]
-        verbs: ["get"]
-      - apiGroups: ["route.openshift.io"]
-        resources: ["routes"]
-        verbs: ["get"]
-      - apiGroups: ["config.openshift.io"]
-        resources: ["clusterversions"]
-        verbs: ["get"]
+      - apiGroups:
+          - '*'
+        resources:
+          - '*'
+        verbs:
+          - '*'
+      - nonResourceURLs:
+          - '*'
+        verbs:
+          - '*'
     - kind: ClusterRoleBinding
       apiVersion: rbac.authorization.k8s.io/v1
       metadata:
