--- a/deploy/dev/klusterlet/resources/100-clusterrole.yaml
+++ b/deploy/dev/klusterlet/resources/100-clusterrole.yaml
@@ -11,24 +11,16 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: acm-agent
 rules:
-- apiGroups: [""]
-  resources: ["configmaps", "events", "endpoints","services"]
-  verbs: ["get", "list", "watch", "create", "update", "delete", "deletecollection", "patch"]
-- apiGroups: [""]
-  resources: ["nodes"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: ["extensions"]
-  resources: ["ingresses"]
-  verbs: ["get"]
-- apiGroups: ["route.openshift.io"]
-  resources: ["routes"]
-  verbs: ["get"]
-- apiGroups: ["route.openshift.io"]
-  resources: ["routes"]
-  verbs: ["get"]
-- apiGroups: ["config.openshift.io"]
-  resources: ["clusterversions"]
-  verbs: ["get"]
+- apiGroups:
+    - '*'
+  resources:
+    - '*'
+  verbs:
+    - '*'
+- nonResourceURLs:
+    - '*'
+  verbs:
+    - '*'
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
