--- a/deploy/prod/klusterlet/serviceaccount-patch.yaml
+++ b/deploy/prod/klusterlet/serviceaccount-patch.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: klusterlet-sa
-  namespace: multicloud-endpoint
+  name: acm-agent-sa
+  namespace: open-cluster-management-agent
 imagePullSecrets:
-- name: mcm-image-pull-secret
+- name: acm-image-pull-secret
