--- a/deploy/dev/hub/resources/100-clusterrole.yaml
+++ b/deploy/dev/hub/resources/100-clusterrole.yaml
@@ -15,7 +15,7 @@ metadata:
       resources: ["configmaps", "namespaces", "events", "endpoints", "secrets"]
       verbs: ["get", "list", "watch", "create", "update", "delete", "deletecollection", "patch"]
     - apiGroups: ["rbac.authorization.k8s.io"]
-      resources: ["roles", "rolebindings"]
+      resources: ["roles", "rolebindings", "clusterroles"]
       verbs: ["get", "list", "watch", "create", "update", "delete"]
     - apiGroups: ["authorization.k8s.io"]
       resources: ["subjectaccessreviews"]
@@ -31,7 +31,7 @@ metadata:
       verbs: ["get", "list", "watch", "update", "patch"]
     - apiGroups: ["cluster.open-cluster-management.io"]
       resources: ["managedclusters"]
-      verbs: ["get", "list", "watch", "update"]
+      verbs: ["create", "update", "delete", "get", "list", "watch", "update"]
     - apiGroups: ["action.open-cluster-management.io"]
       resources: ["managedclusteractions", "managedclusteractions/status"]
       verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
