cherry-pick add clusterrole and label (#168) (#172)
* add clusterrole and label (#168)

* use escalate

--- a/deploy/dev/hub/resources/100-clusterrole.yaml
+++ b/deploy/dev/hub/resources/100-clusterrole.yaml
@@ -15,8 +15,11 @@ metadata:
       resources: ["configmaps", "namespaces", "events", "endpoints", "secrets"]
       verbs: ["get", "list", "watch", "create", "update", "delete", "deletecollection", "patch"]
     - apiGroups: ["rbac.authorization.k8s.io"]
-      resources: ["roles", "rolebindings"]
+      resources: ["roles", "rolebindings", "clusterroles"]
       verbs: ["get", "list", "watch", "create", "update", "delete"]
+    - apiGroups: ["rbac.authorization.k8s.io"]
+      resources: ["clusterroles"]
+      verbs: ["get", "list", "watch", "create", "update", "delete", "escalate"]
     - apiGroups: ["authorization.k8s.io"]
       resources: ["subjectaccessreviews"]
       verbs: ["get", "create"]
