--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ env:
   global:
     # Required
     - OS=linux
-
+    - TRAVIS_WORKER_DOCKER_CPUS=4
     # Component Specific
     - COMPONENT_INIT_COMMAND=${TRAVIS_BUILD_DIR}/build/install-dependencies.sh
     - COMPONENT_DEPLOY_COMMAND=${TRAVIS_BUILD_DIR}/build/deploy-to-cluster.sh
@@ -47,31 +47,31 @@ stages:
 
 jobs:
   include:
-    - stage: lint
-      name: "Run code lint"
-      if: type = pull_request
-      script: bash ${TRAVIS_BUILD_DIR}/build/run-code-lint.sh
-    - stage: build
-      name: "Build the image and run unit tests"
-      script:
-        - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
-        - |
-          make
-          make copyright-check TRAVIS_BRANCH=${TRAVIS_BRANCH} TRAVIS_PULL_REQUEST_BRANCH=${TRAVIS_PULL_REQUEST_BRANCH}
-          make component/build
-          make component/push
-          make imagescan/status
-          make security/scans
-    - stage: unit-test
-      name: "Run unit test"
-      script:
-        # Set the image tag differently for PRs
-        - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
-        # Bootstrap the build harness, pull test image, and run unit tests.
-        - |
-          make
-          make component/test/unit
-          make sonar/go
+#    - stage: lint
+#      name: "Run code lint"
+#      if: type = pull_request
+#      script: bash ${TRAVIS_BUILD_DIR}/build/run-code-lint.sh
+#    - stage: build
+#      name: "Build the image and run unit tests"
+#      script:
+#        - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
+#        - |
+#          make
+#          make copyright-check TRAVIS_BRANCH=${TRAVIS_BRANCH} TRAVIS_PULL_REQUEST_BRANCH=${TRAVIS_PULL_REQUEST_BRANCH}
+#          make component/build
+#          make component/push
+#          make imagescan/status
+#          make security/scans
+#    - stage: unit-test
+#      name: "Run unit test"
+#      script:
+#        # Set the image tag differently for PRs
+#        - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
+#        # Bootstrap the build harness, pull test image, and run unit tests.
+#        - |
+#          make
+#          make component/test/unit
+#          make sonar/go
     - stage: test-e2e
       name: "Deploy the image to a cluster and run e2e tests"
       if: type = pull_request
@@ -82,10 +82,10 @@ jobs:
           make
           make component/pull
           make component/test/e2e
-    - stage: publish
-      name: "Publish the image to quay with an official version/sha tag and publish entry to integration pipeline stage"
-      if: type = push AND branch =~ /^release-[0-9]+\..*$/
-      script:
-        - |
-          make
-          make pipeline-manifest/update PIPELINE_MANIFEST_COMPONENT_SHA256=${TRAVIS_COMMIT} PIPELINE_MANIFEST_COMPONENT_REPO=${TRAVIS_REPO_SLUG} PIPELINE_MANIFEST_BRANCH=${TRAVIS_BRANCH}
+#    - stage: publish
+#      name: "Publish the image to quay with an official version/sha tag and publish entry to integration pipeline stage"
+#      if: type = push AND branch =~ /^release-[0-9]+\..*$/
+#      script:
+#        - |
+#          make
+#          make pipeline-manifest/update PIPELINE_MANIFEST_COMPONENT_SHA256=${TRAVIS_COMMIT} PIPELINE_MANIFEST_COMPONENT_REPO=${TRAVIS_REPO_SLUG} PIPELINE_MANIFEST_BRANCH=${TRAVIS_BRANCH}
