--- a/deploy/dev/hub/kustomization.yaml
+++ b/deploy/dev/hub/kustomization.yaml
@@ -3,6 +3,9 @@ resources:
 - resources/crds/internal.open-cluster-management.io_managedclusterinfos.yaml
 - resources/crds/inventory.open-cluster-management.io_baremetalassets.yaml
 - resources/crds/view.open-cluster-management.io_managedclusterviews.yaml
+- resources/crds/hive.openshift.io_syncsets.yaml
+- resources/crds/hive.openshift.io_clusterdeployments.yaml
+- resources/crds/hive.openshift.io_syncsetinstances.yaml
 - resources/100-clusterrole.yaml
 - resources/100-agent-ca.yaml
 - resources/200-proxyserver.yaml
