--- a/deploy/dev/hub/resources/200-proxyserver.yaml
+++ b/deploy/dev/hub/resources/200-proxyserver.yaml
@@ -1,36 +1,3 @@
-
-kind: Service
-apiVersion: v1
-metadata:
-  name: acm-proxyserver
-  namespace: open-cluster-management
-spec:
-  selector:
-    app: acm-proxyserver
-  ports:
-  - name: secure
-    protocol: TCP
-    port: 443
-    targetPort: 6443
-
----
-
-apiVersion: apiregistration.k8s.io/v1
-kind: APIService
-metadata:
-  name: v1beta1.proxy.open-cluster-management.io
-spec:
-  group: proxy.open-cluster-management.io
-  version: v1beta1
-  service:
-    namespace: open-cluster-management
-    name: acm-proxyserver
-  insecureSkipTLSVerify: true
-  groupPriorityMinimum: 10000
-  versionPriority: 20
-
----
-
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -55,8 +22,9 @@ spec:
         imagePullPolicy: IfNotPresent
         args:
           - "/acm-proxyserver"
-          - "--cert-dir=/tmp"
           - "--secure-port=6443"
+          - "--tls-cert-file=/var/run/apiserver/tls.crt"
+          - "--tls-private-key-file=/var/run/apiserver/tls.key"
           - "--agent-cafile=/var/run/agent/ca.crt"
           - "--agent-certfile=/var/run/agent/tls.crt"
           - "--agent-keyfile=/var/run/agent/tls.key"
@@ -76,8 +44,14 @@ spec:
         volumeMounts:
         - mountPath: /var/run/agent
           name: agent-certs
+        - mountPath: /var/run/apiserver
+          name: apiserver-certs
       volumes:
       - name: agent-certs
         secret:
           defaultMode: 420
-          secretName: acm-agent-self-signed-secrets
+          secretName: acm-agent-cert
+      - name: apiserver-certs
+        secret:
+          defaultMode: 420
+          secretName: acm-apiserver-cert
